# ChangeLog for sci-mathematics/reduce
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/reduce/ChangeLog,v 1.3 2011/09/22 11:15:33 grozin Exp $

*reduce-20110414 (22 Sep 2011)

  22 Sep 2011; Andrey Grozin <grozin@gentoo.org> +reduce-20110414.ebuild:
  Version bump

*reduce-20101007-r1 (29 Mar 2011)

  29 Mar 2011; Andrey Grozin <grozin@gentoo.org> -reduce-20101007.ebuild,
  +reduce-20101007-r1.ebuild, +files/csl, +files/redcsl, -files/reduce:
  QA issues fixed (bug #358383), csl now installed, pdf now installed with
  USE=doc (not tex files)

*reduce-20101007 (05 Jan 2011)

  05 Jan 2011; Andrey Grozin <grozin@gentoo.org> +files/64reduce-gentoo.el,
  +reduce-20101007.ebuild, +files/reduce, +metadata.xml:
  Initial import
