@@ -1,9 +1,8 @@
 AUX 64reduce-gentoo.el 215 RMD160 c1ea0ffbb343c45610dc9343b19cf99d49a64ebb SHA1 c14ddfffaf88f454acee2dad81be9d6b6060a1d6 SHA256 f5a36df7b436104b4ed133edd02a261163f39ee265d2fb19214ab940c159dd23
 AUX csl 38 RMD160 8b9bee18834a82c3e0681455c35174385a0d3796 SHA1 5001f02d0d74c8c1c9df83eca8299ec63fd328e6 SHA256 d99f85be4783179534d8c805f839d66b75671caa21516a6ba7497fd9639bd68b
 AUX redcsl 41 RMD160 f8f86cdf3625e70a07a406f6e04849fa6b9acdcb SHA1 5ab636dacd8eb732870f2a093b9e87d0a187afc0 SHA256 bd76b9bc8eb3ea6445793db744c5d2833e4f777242996e597f9015ad983ee8ba
-DIST reduce-algebra-20101007.tar.bz2 64624533 RMD160 73687191a38fe5db227b031815d84e0710fdec19 SHA1 cce8ebeb0eeaa8baa9ecd229c4ee563672d652ba SHA256 cda53b974b9e16125f4fea823f6fc73d5b6dac4e40dae69e1c22ebb8fa7a1a0f
 DIST reduce-src-20110414.tar.bz2 136783974 RMD160 cd9842fe607b439a8db8daf8083eb2aaa9ac05d7 SHA1 a6c73f5fcaa3efeb1cb9650bb6478d912e3914a1 SHA256 d6ac7a30e817ea71555d21b03a119a5236967b251eae8946a1817ae9a81cee03
-EBUILD reduce-20101007-r1.ebuild 2229 RMD160 a09335780de414046b8833a692c7be3cd760093d SHA1 b13796d32016c5e1e652fa425cbb99f7dcef0264 SHA256 5f4c248224c8a9141f5b7ea7f5c17a2bedc5ac6b4c0a0053d3575a6b590f748c
+EBUILD reduce-20110414-r1.ebuild 2551 RMD160 d769f90c1c015dad5fdbf2ef876388822e8f313f SHA1 4236fda9efb5ca8f92b4dfe3f0b28027f5aee4ce SHA256 a113fe891e597887c9db7a7c0f936e93911f9c7c2320554b9fb37299cc8357d4
 EBUILD reduce-20110414.ebuild 2151 RMD160 22e332cc3714897e453d83e33dea430372eabb33 SHA1 7e7e930202ad60275126eaf7bfc6a93cc64091bf SHA256 1a80ecb2e36af574c424914fe146f911d50a94232efae307cf457c1b5fadcdce
-MISC ChangeLog 805 RMD160 d7317e898d773fafe7db717e16858c23d0b6e31f SHA1 c08fb9533bd68ee8c6a69e24874beeca97d1a953 SHA256 95e2e57e3c9eb984323420e08098899f90de50182bfa0e8a568a3e89f03d574b
+MISC ChangeLog 993 RMD160 08cbed1c92ecff7d7790899f3bd6d6ed11c5d4ff SHA1 c6196694a0a47c7e0466b3c5b634f6ab3416131e SHA256 e61664d337f23ae7861edbe13f708f3d2e6930789008127e0b5cd1086cd1c0f5
 MISC metadata.xml 381 RMD160 e4e15644314b8ebedf988136c974a4eb06944d55 SHA1 43012cd92b799a81f00cfb715de849f61a9169f0 SHA256 0ab958d614f9d0a5ff87b86bf74ab0ef616bc355757e34f69f1d2f53efbc7d6d
