@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/reduce
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/reduce/ChangeLog,v 1.3 2011/09/22 11:15:33 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/reduce/ChangeLog,v 1.4 2011/12/22 12:23:03 grozin Exp $
+
+*reduce-20110414-r1 (22 Dec 2011)
+
+  22 Dec 2011; Andrey Grozin <grozin@gentoo.org> -reduce-20101007-r1.ebuild,
+  +reduce-20110414-r1.ebuild:
+  Keyword ~amd64, better directory structure
 
 *reduce-20110414 (22 Sep 2011)
 
